--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,9 @@ tasks.withType(JavaCompile) {
 test {
     useJUnitPlatform()
 }
+
+task positive_test(type: Test) {
+    useJUnitPlatform {
+        includeTags 'positive'
+    }
+}
